# guess_llm

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: monash_darts_combined.yaml  multi_func_1.0.yaml  multi_func_10.0.yaml  multi_func_1000.0.yaml  multi_func_10000.0.yaml  multi_func_combined.yaml  wandb.yaml
configs/datagen/: darts_dataset.yaml  monash_dataset.yaml  multi_func_1.0_dataset.yaml  multi_func_10.0_dataset.yaml  multi_func_1000.0_dataset.yaml  multi_func_10000.0_dataset.yaml
configs/model/: mag_reg.yaml  quantile_mag_reg.yaml
notebooks/: utils.py  visualise_center_predictions.ipynb  visualise_real_data.ipynb  visualise_synthetic_uncertainty.ipynb
src/guess_llm/: __init__.py
src/guess_llm/datasets/: concat_real_data.py  concat_synt_data.py  dataloaders.py  generate_splits.py  get_darts_ts.py  get_llm_data.py  get_monash_ts.py  get_multi_func_ts.py
src/guess_llm/llm_utils/: llm_no_scaling.py  llm_utils.py  serialize.py
src/guess_llm/probe/: models.py  test.py  train.py
src/guess_llm/utils/: utils.py
